// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LearningBoard loading 1`] = `
<div>
  <TextFieldLoading
    disabled={true}
    label="Your option"
    loading={true}
    onChange={[Function]}
    value={null}
  />
  <h3 />
  <h5 />
  <Jss(ControlsSeparator)
    align="center"
  >
    <ButtonControl
      disabled={true}
      onClick={[Function]}
      title="Submit my answer"
    >
      <pure(DoneIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={true}
      onClick={[Function]}
      title="Give me a hint"
    >
      <pure(RemoveRedEyeIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={true}
      onClick={[Function]}
      title="I know this word"
    >
      <pure(DoneAllIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={true}
      onClick={[Function]}
      title="I forgot this word, show me the translation"
    >
      <pure(ErrorOutlineIcon) />
    </ButtonControl>
  </Jss(ControlsSeparator)>
</div>
`;

exports[`LearningBoard render 1`] = `
<div>
  <TextFieldLoading
    disabled={null}
    label="Your option"
    loading={null}
    onChange={[Function]}
    value={null}
  />
  <h3 />
  <h5 />
  <Jss(ControlsSeparator)
    align="center"
  >
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="Submit my answer"
    >
      <pure(DoneIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="Give me a hint"
    >
      <pure(RemoveRedEyeIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="I know this word"
    >
      <pure(DoneAllIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="I forgot this word, show me the translation"
    >
      <pure(ErrorOutlineIcon) />
    </ButtonControl>
  </Jss(ControlsSeparator)>
</div>
`;

exports[`LearningBoard times learnt is more then 1 1`] = `
<div>
  <TextFieldLoading
    disabled={null}
    label="Your option"
    loading={null}
    onChange={[Function]}
    value={null}
  />
  <h3 />
  <h5>
    Learnt 2 times before
  </h5>
  <Jss(ControlsSeparator)
    align="center"
  >
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="Submit my answer"
    >
      <pure(DoneIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="Give me a hint"
    >
      <pure(RemoveRedEyeIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="I know this word"
    >
      <pure(DoneAllIcon) />
    </ButtonControl>
    <ButtonControl
      disabled={null}
      onClick={[Function]}
      title="I forgot this word, show me the translation"
    >
      <pure(ErrorOutlineIcon) />
    </ButtonControl>
  </Jss(ControlsSeparator)>
</div>
`;
